macOS/kinetic/Terminal_Output_Issue_3.txt
ros-install-project-2@John-Pauls-MacBook-Pro ~ % sudo -H python3 -m pip install wxPython 
WARNING: pip is configured with locations that require TLS/SSL, however the ssl module in Python is not available.
Requirement already satisfied: wxPython in /usr/local/lib/python3.11/site-packages (4.2.0)
Requirement already satisfied: pillow in /usr/local/lib/python3.11/site-packages (from wxPython) (9.4.0)
Requirement already satisfied: six in /usr/local/lib/python3.11/site-packages (from wxPython) (1.16.0)
Requirement already satisfied: numpy in /usr/local/lib/python3.11/site-packages (from wxPython) (1.24.2)
WARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv
WARNING: pip is configured with locations that require TLS/SSL, however the ssl module in Python is not available.
Could not fetch URL https://pypi.org/simple/pip/: There was a problem confirming the ssl certificate: HTTPSConnectionPool(host='pypi.org', port=443): Max retries exceeded with url: /simple/pip/ (Caused by SSLError("Can't connect to HTTPS URL because the SSL module is not available.")) - skipping
ros-install-project-2@John-Pauls-MacBook-Pro ~ % sudo apt install build-essential zlib1g-dev libncurses5-dev libgdbm-dev libnss3-dev libssl-dev libreadline-dev libffi-dev wget
Password:
The operation couldn’t be completed. Unable to locate a Java Runtime.
Please visit http://www.java.com for information on installing Java.

ros-install-project-2@John-Pauls-MacBook-Pro ~ % import ssl
zsh: command not found: import
ros-install-project-2@John-Pauls-MacBook-Pro ~ % pip3 install ssl
Defaulting to user installation because normal site-packages is not writeable
Collecting ssl
  Downloading ssl-1.16.tar.gz (33 kB)
  Preparing metadata (setup.py) ... error
  error: subprocess-exited-with-error
  
  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [7 lines of output]
      Traceback (most recent call last):
        File "<string>", line 2, in <module>
        File "<pip-setuptools-caller>", line 34, in <module>
        File "/private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-install-hbesgm5_/ssl_a8b868ae467946c7a9f99e897b9a3334/setup.py", line 33
          print 'looking for', f
                ^
      SyntaxError: Missing parentheses in call to 'print'. Did you mean print('looking for', f)?
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
ros-install-project-2@John-Pauls-MacBook-Pro ~ % pip install ssl 
DEPRECATION: Python 2.7 reached the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 is no longer maintained. pip 21.0 will drop support for Python 2.7 in January 2021. More details about Python 2 support in pip can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support pip 21.0 will remove support for this functionality.
Collecting ssl
  Using cached ssl-1.16.tar.gz (33 kB)
    ERROR: Command errored out with exit status 1:
     command: /Library/Frameworks/Python.framework/Versions/2.7/Resources/Python.app/Contents/MacOS/Python -c 'import sys, setuptools, tokenize; sys.argv[0] = '"'"'/private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-install-bHj6LA/ssl/setup.py'"'"'; __file__='"'"'/private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-install-bHj6LA/ssl/setup.py'"'"';f=getattr(tokenize, '"'"'open'"'"', open)(__file__);code=f.read().replace('"'"'\r\n'"'"', '"'"'\n'"'"');f.close();exec(compile(code, __file__, '"'"'exec'"'"'))' egg_info --egg-base /private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-pip-egg-info-RTLLoA
         cwd: /private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-install-bHj6LA/ssl/
    Complete output (5 lines):
    Traceback (most recent call last):
      File "<string>", line 1, in <module>
      File "/private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-install-bHj6LA/ssl/setup.py", line 12, in <module>
        + "or earlier.")
    ValueError: This extension should not be used with Python 2.6 or later (already built in), and has not been tested with Python 2.3.4 or earlier.
    ----------------------------------------
ERROR: Command errored out with exit status 1: python setup.py egg_info Check the logs for full command output.
ros-install-project-2@John-Pauls-MacBook-Pro ~ % pip3 install ssl
Defaulting to user installation because normal site-packages is not writeable
Collecting ssl
  Using cached ssl-1.16.tar.gz (33 kB)
  Preparing metadata (setup.py) ... error
  error: subprocess-exited-with-error
  
  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [7 lines of output]
      Traceback (most recent call last):
        File "<string>", line 2, in <module>
        File "<pip-setuptools-caller>", line 34, in <module>
        File "/private/var/folders/jj/5kl4qkr93hn_sr83b8wnzmlm0000gr/T/pip-install-eoljpgs3/ssl_ad68fdf11372478c950db97769c91740/setup.py", line 33
          print 'looking for', f
                ^
      SyntaxError: Missing parentheses in call to 'print'. Did you mean print('looking for', f)?
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
ros-install-project-2@John-Pauls-MacBook-Pro ~ % 
